--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,11 @@
+lsi: false
+safe: true
+source: 
 theme: jekyll-theme-minimal
+incremental: false
+highlighter: rouge
+gist:
+  noscript: false
+kramdown:
+  math_engine: mathjax
+  syntax_highlighter: rouge
